--- a/موقع فيديوهات ريلز/video.html
+++ b/موقع فيديوهات ريلز/video.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!Doctype html>
 <html lang="ar" dir="rtl">
 <head>
 <meta charset="utf-8" />
@@ -463,3 +463,4 @@ document.addEventListener('visibilitychange', ()=> {
 
 </body>
 </html>
+
