--- a/موقع كاتب/writer.html
+++ b/موقع كاتب/writer.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!Doctype html>
 <html lang="ar" dir="rtl">
 <head>
 <meta charset="utf-8" />
@@ -582,3 +582,4 @@ document.addEventListener('DOMContentLoaded', ()=> { resultCount.textContent = s
 
 </body>
 </html>
+
