--- a/موقع متجر/story.html
+++ b/موقع متجر/story.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!Doctype html>
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="utf-8">
@@ -349,3 +349,4 @@ window.addEventListener('beforeunload', ()=>{ sessionStorage.setItem('lastFilter
 </script>
 </body>
 </html>
+
