--- a/موقع مصور/photo.html
+++ b/موقع مصور/photo.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!Doctype html>
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="utf-8" />
@@ -402,3 +402,4 @@ updateGallery();
 
 </body>
 </html>
+
