--- a/موقع مطعم/resturant.html
+++ b/موقع مطعم/resturant.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!Doctype html>
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="utf-8" />
@@ -386,3 +386,4 @@
 
 </body>
 </html>
+
